--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,4 +1,4 @@
 <div>
-  <h2>Perfil</h2>
-  <app-dynamic-form [questions]="questions"></app-dynamic-form>
+    <h2>Perfil</h2>
+    <app-dynamic-form [questions]="questions|async"></app-dynamic-form>
 </div>
